Ajuste en los controladores de Hoteles y Habitaciones para mejorar la respuesta
